// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data/AR_diagnostisk_art.json har antall rader 1`] = `0`;

exports[`data/AR_diagnostisk_art.json har forventede nøkler 1`] = `Object {}`;

exports[`data/AR_taxon.json har antall rader 1`] = `2`;

exports[`data/AR_taxon.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2,
  "infoUrl": 2,
  "navnSciId": 2,
  "relasjon": 2,
  "taxonId": 2,
  "taxonIdParent": 2,
  "tittel": 2,
  "url": 2,
}
`;

exports[`data/MI_variasjon.json har antall rader 1`] = `2909`;

exports[`data/MI_variasjon.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2909,
  "tittel": 2909,
}
`;

exports[`data/NA_MI_liste.json har antall rader 1`] = `3438`;

exports[`data/NA_MI_liste.json har forventede nøkler 1`] = `
Object {
  "foreldre": 2915,
  "infoUrl": 3438,
  "tittel": 3438,
}
`;

exports[`data/NA_definisjonsgrunnlag.json har antall rader 1`] = `20`;

exports[`data/NA_definisjonsgrunnlag.json har forventede nøkler 1`] = `
Object {
  "barn": 20,
  "foreldre": 20,
  "tittel": 20,
  "undertittel": 20,
}
`;

exports[`data/NA_hovedtype.json har antall rader 1`] = `92`;

exports[`data/NA_hovedtype.json har forventede nøkler 1`] = `
Object {
  "definisjonsgrunnlag": 92,
  "kunnskap": 92,
  "lkm": 92,
  "nin1": 92,
  "nivå": 92,
  "prosedyrekategori": 92,
}
`;

exports[`data/NA_kode.json har antall rader 1`] = `1796`;

exports[`data/NA_kode.json har forventede nøkler 1`] = `
Object {
  "tittel": 1796,
}
`;

exports[`data/NA_overstyr_hierarki.json har antall rader 1`] = `851`;

exports[`data/NA_overstyr_hierarki.json har forventede nøkler 1`] = `
Object {
  "0": 851,
}
`;

exports[`data/NA_prosedyrekategori.json har antall rader 1`] = `17`;

exports[`data/NA_prosedyrekategori.json har forventede nøkler 1`] = `
Object {
  "barn": 17,
  "foreldre": 17,
  "tittel": 17,
  "undertittel": 17,
}
`;

exports[`data/VV_med_kommune.json har antall rader 1`] = `2865`;

exports[`data/VV_med_kommune.json har forventede nøkler 1`] = `
Object {
  "geometry": 2865,
  "properties": 2865,
  "type": 2865,
}
`;

exports[`data/VV_naturvernområde.json har antall rader 1`] = `2865`;

exports[`data/VV_naturvernområde.json har forventede nøkler 1`] = `
Object {
  "data": 2865,
  "infoUrl": 2865,
  "relasjon": 2865,
  "tittel": 2865,
}
`;

exports[`data/VV_verneområde_geojson.json har antall rader 1`] = `2865`;

exports[`data/VV_verneområde_geojson.json har forventede nøkler 1`] = `
Object {
  "geometry": 2865,
  "properties": 2865,
  "type": 2865,
}
`;

exports[`data/bbox.json har antall rader 1`] = `1033`;

exports[`data/bbox.json har forventede nøkler 1`] = `
Object {
  "bbox": 1033,
}
`;

exports[`data/flett_metabase.json har antall rader 1`] = `6890`;

exports[`data/flett_metabase.json har forventede nøkler 1`] = `
Object {
  "barn": 37,
  "foreldre": 6890,
  "tittel": 6890,
  "undertittel": 37,
}
`;

exports[`data/inn_ao_fylke.json har antall rader 1`] = `18`;

exports[`data/inn_ao_fylke.json har forventede nøkler 1`] = `
Object {
  "tittel": 18,
  "utenRamme": 18,
}
`;

exports[`data/inn_ao_kommune.json har antall rader 1`] = `422`;

exports[`data/inn_ao_kommune.json har forventede nøkler 1`] = `
Object {
  "tittel": 422,
}
`;

exports[`data/inn_ao_kommune_geom.json har antall rader 1`] = `2`;

exports[`data/inn_ao_kommune_geom.json har forventede nøkler 1`] = `
Object {
  "0": 2,
  "1": 2,
  "10": 2,
  "100": 1,
  "101": 1,
  "102": 1,
  "103": 1,
  "104": 1,
  "105": 1,
  "106": 1,
  "107": 1,
  "108": 1,
  "109": 1,
  "11": 2,
  "110": 1,
  "111": 1,
  "112": 1,
  "113": 1,
  "114": 1,
  "115": 1,
  "116": 1,
  "117": 1,
  "118": 1,
  "119": 1,
  "12": 2,
  "120": 1,
  "121": 1,
  "122": 1,
  "123": 1,
  "124": 1,
  "125": 1,
  "126": 1,
  "127": 1,
  "128": 1,
  "129": 1,
  "13": 2,
  "130": 1,
  "131": 1,
  "132": 1,
  "133": 1,
  "134": 1,
  "135": 1,
  "136": 1,
  "137": 1,
  "138": 1,
  "139": 1,
  "14": 2,
  "140": 1,
  "141": 1,
  "142": 1,
  "143": 1,
  "144": 1,
  "145": 1,
  "146": 1,
  "147": 1,
  "148": 1,
  "149": 1,
  "15": 2,
  "150": 1,
  "151": 1,
  "152": 1,
  "153": 1,
  "154": 1,
  "155": 1,
  "156": 1,
  "157": 1,
  "158": 1,
  "159": 1,
  "16": 2,
  "160": 1,
  "161": 1,
  "162": 1,
  "163": 1,
  "164": 1,
  "165": 1,
  "166": 1,
  "167": 1,
  "168": 1,
  "169": 1,
  "17": 1,
  "170": 1,
  "171": 1,
  "172": 1,
  "173": 1,
  "174": 1,
  "175": 1,
  "176": 1,
  "177": 1,
  "178": 1,
  "179": 1,
  "18": 1,
  "180": 1,
  "181": 1,
  "182": 1,
  "183": 1,
  "184": 1,
  "185": 1,
  "186": 1,
  "187": 1,
  "188": 1,
  "189": 1,
  "19": 1,
  "190": 1,
  "191": 1,
  "192": 1,
  "193": 1,
  "194": 1,
  "195": 1,
  "196": 1,
  "197": 1,
  "198": 1,
  "199": 1,
  "2": 2,
  "20": 1,
  "200": 1,
  "201": 1,
  "202": 1,
  "203": 1,
  "204": 1,
  "205": 1,
  "206": 1,
  "207": 1,
  "208": 1,
  "209": 1,
  "21": 1,
  "210": 1,
  "211": 1,
  "212": 1,
  "213": 1,
  "214": 1,
  "215": 1,
  "216": 1,
  "217": 1,
  "218": 1,
  "219": 1,
  "22": 1,
  "220": 1,
  "221": 1,
  "222": 1,
  "223": 1,
  "224": 1,
  "225": 1,
  "226": 1,
  "227": 1,
  "228": 1,
  "229": 1,
  "23": 1,
  "230": 1,
  "231": 1,
  "232": 1,
  "233": 1,
  "234": 1,
  "235": 1,
  "236": 1,
  "237": 1,
  "238": 1,
  "239": 1,
  "24": 1,
  "240": 1,
  "241": 1,
  "242": 1,
  "243": 1,
  "244": 1,
  "245": 1,
  "246": 1,
  "247": 1,
  "248": 1,
  "249": 1,
  "25": 1,
  "250": 1,
  "251": 1,
  "252": 1,
  "253": 1,
  "254": 1,
  "255": 1,
  "256": 1,
  "257": 1,
  "258": 1,
  "259": 1,
  "26": 1,
  "260": 1,
  "261": 1,
  "262": 1,
  "263": 1,
  "264": 1,
  "265": 1,
  "266": 1,
  "267": 1,
  "268": 1,
  "269": 1,
  "27": 1,
  "270": 1,
  "271": 1,
  "272": 1,
  "273": 1,
  "274": 1,
  "275": 1,
  "276": 1,
  "277": 1,
  "278": 1,
  "279": 1,
  "28": 1,
  "280": 1,
  "281": 1,
  "282": 1,
  "283": 1,
  "284": 1,
  "285": 1,
  "286": 1,
  "287": 1,
  "288": 1,
  "289": 1,
  "29": 1,
  "290": 1,
  "291": 1,
  "292": 1,
  "293": 1,
  "294": 1,
  "295": 1,
  "296": 1,
  "297": 1,
  "298": 1,
  "299": 1,
  "3": 2,
  "30": 1,
  "300": 1,
  "301": 1,
  "302": 1,
  "303": 1,
  "304": 1,
  "305": 1,
  "306": 1,
  "307": 1,
  "308": 1,
  "309": 1,
  "31": 1,
  "310": 1,
  "311": 1,
  "312": 1,
  "313": 1,
  "314": 1,
  "315": 1,
  "316": 1,
  "317": 1,
  "318": 1,
  "319": 1,
  "32": 1,
  "320": 1,
  "321": 1,
  "322": 1,
  "323": 1,
  "324": 1,
  "325": 1,
  "326": 1,
  "327": 1,
  "328": 1,
  "329": 1,
  "33": 1,
  "330": 1,
  "331": 1,
  "332": 1,
  "333": 1,
  "334": 1,
  "335": 1,
  "336": 1,
  "337": 1,
  "338": 1,
  "339": 1,
  "34": 1,
  "340": 1,
  "341": 1,
  "342": 1,
  "343": 1,
  "344": 1,
  "345": 1,
  "346": 1,
  "347": 1,
  "348": 1,
  "349": 1,
  "35": 1,
  "350": 1,
  "351": 1,
  "352": 1,
  "353": 1,
  "354": 1,
  "355": 1,
  "356": 1,
  "357": 1,
  "358": 1,
  "359": 1,
  "36": 1,
  "360": 1,
  "361": 1,
  "362": 1,
  "363": 1,
  "364": 1,
  "365": 1,
  "366": 1,
  "367": 1,
  "368": 1,
  "369": 1,
  "37": 1,
  "370": 1,
  "371": 1,
  "372": 1,
  "373": 1,
  "374": 1,
  "375": 1,
  "376": 1,
  "377": 1,
  "378": 1,
  "379": 1,
  "38": 1,
  "380": 1,
  "381": 1,
  "382": 1,
  "383": 1,
  "384": 1,
  "385": 1,
  "386": 1,
  "387": 1,
  "388": 1,
  "389": 1,
  "39": 1,
  "390": 1,
  "391": 1,
  "392": 1,
  "393": 1,
  "394": 1,
  "395": 1,
  "396": 1,
  "397": 1,
  "398": 1,
  "399": 1,
  "4": 2,
  "40": 1,
  "400": 1,
  "401": 1,
  "402": 1,
  "403": 1,
  "404": 1,
  "405": 1,
  "406": 1,
  "407": 1,
  "408": 1,
  "409": 1,
  "41": 1,
  "410": 1,
  "411": 1,
  "412": 1,
  "413": 1,
  "414": 1,
  "415": 1,
  "416": 1,
  "417": 1,
  "418": 1,
  "419": 1,
  "42": 1,
  "420": 1,
  "421": 1,
  "422": 1,
  "423": 1,
  "424": 1,
  "425": 1,
  "426": 1,
  "427": 1,
  "43": 1,
  "44": 1,
  "45": 1,
  "46": 1,
  "47": 1,
  "48": 1,
  "49": 1,
  "5": 2,
  "50": 1,
  "51": 1,
  "52": 1,
  "53": 1,
  "54": 1,
  "55": 1,
  "56": 1,
  "57": 1,
  "58": 1,
  "59": 1,
  "6": 2,
  "60": 1,
  "61": 1,
  "62": 1,
  "63": 1,
  "64": 1,
  "65": 1,
  "66": 1,
  "67": 1,
  "68": 1,
  "69": 1,
  "7": 2,
  "70": 1,
  "71": 1,
  "72": 1,
  "73": 1,
  "74": 1,
  "75": 1,
  "76": 1,
  "77": 1,
  "78": 1,
  "79": 1,
  "8": 2,
  "80": 1,
  "81": 1,
  "82": 1,
  "83": 1,
  "84": 1,
  "85": 1,
  "86": 1,
  "87": 1,
  "88": 1,
  "89": 1,
  "9": 2,
  "90": 1,
  "91": 1,
  "92": 1,
  "93": 1,
  "94": 1,
  "95": 1,
  "96": 1,
  "97": 1,
  "98": 1,
  "99": 1,
}
`;

exports[`data/inn_ar_taxon.json har antall rader 1`] = `2`;

exports[`data/inn_ar_taxon.json har forventede nøkler 1`] = `
Object {
  "AcceptedName": 2,
  "Id": 2,
  "PreferredVernacularName": 2,
  "_": 0,
  "dynamicProperties": 2,
  "scientificNames": 2,
  "taxonID": 2,
  "vernacularNames": 2,
}
`;

exports[`data/inn_mi.json har antall rader 1`] = `2909`;

exports[`data/inn_mi.json har forventede nøkler 1`] = `
Object {
  "Kode": 2909,
  "Navn": 2909,
  "OverordnetKode": 2909,
}
`;

exports[`data/inn_na.json har antall rader 1`] = `1796`;

exports[`data/inn_na.json har forventede nøkler 1`] = `
Object {
  "ElementKode": 1696,
  "Kategori": 1796,
  "Kode": 1796,
  "Navn": 1796,
  "OverordnetKode": 1796,
}
`;

exports[`data/kodetre.json har antall rader 1`] = `6844`;

exports[`data/kodetre.json har forventede nøkler 1`] = `
Object {
  "forelder": 6843,
  "kode": 6844,
  "tittel": 6844,
}
`;

exports[`data/kodetre_postgre.json har antall rader 1`] = `3980`;

exports[`data/kodetre_postgre.json har forventede nøkler 1`] = `
Object {
  "forfedre": 3980,
  "kode": 3980,
  "nivå": 3979,
  "tittel": 3980,
}
`;
